--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "upyunsdk",
-  "version": "1.0.0",
+  "name": "upyun-av-sdk",
+  "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/av.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/babel lib -d build"
+    "compile": "./node_modules/.bin/babel -d lib/ src/",
+    "prepublish": "npm run compile"
   },
-  "author": "",
+  "author": "taevas (yu.zheng@upai.com)",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.79.0",
-    "upyun": "^2.0.4"
+    "request": "^2.79.0"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
