--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "author": "taevas (yu.zheng@upai.com)",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "babel-preset-es2015": "^6.22.0"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
-    "babel-preset-es2015": "^6.22.0",
     "gulp": "^3.9.1",
     "gulp-jscs": "^4.0.0",
     "gulp-jshint": "^2.0.4",
