--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "request": "^2.79.0",
-    "babel-preset-es2015": "^6.22.0"
+    "babel-preset-es2015": "^6.22.0",
+    "babel-cli": "^6.22.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
     "gulp": "^3.9.1",
     "gulp-jscs": "^4.0.0",
     "gulp-jshint": "^2.0.4",
