--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "test-cov": "NODE_ENV=test nyc --check-coverage=true --reporter=text --reporter=lcov mocha",
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile",
+    "postinstall": "npm run compile",
     "lint": "gulp"
   },
   "author": "taevas (yu.zheng@upai.com)",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-cli": "^6.22.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-preset-es2015": "^6.22.0",
     "gulp": "^3.9.1",
     "gulp-jscs": "^4.0.0",
     "gulp-jshint": "^2.0.4",
